完成大部分移植工作，剩余：配方迁移、纹理迁移、元件拆解